Showing some output when Travis fails.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,9 @@ before_install:
 script:
   - make check.lint
   - make check.test
+# When things go wrong, it's useful to have as much info as possible.
+after_failure:
+  - id
+  - pwd
+  - env
+  - ls -lah
